viêt thêm chức năng

--- a/web456/web456.csproj
+++ b/web456/web456.csproj
@@ -181,6 +181,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\Api\CoursesController.cs" />
     <Compile Include="Controllers\AttendancesController.cs" />
     <Compile Include="Controllers\CoursesController.cs" />
     <Compile Include="Controllers\FollowingsController.cs" />
@@ -214,6 +215,10 @@
     <Compile Include="Migrations\202006141620218_AddFollowingsTable.cs" />
     <Compile Include="Migrations\202006141620218_AddFollowingsTable.Designer.cs">
       <DependentUpon>202006141620218_AddFollowingsTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202006150332159_AddIsCanceledColumnToCOurse.cs" />
+    <Compile Include="Migrations\202006150332159_AddIsCanceledColumnToCOurse.Designer.cs">
+      <DependentUpon>202006150332159_AddIsCanceledColumnToCOurse.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -287,6 +292,8 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Courses\Create.cshtml" />
+    <Content Include="Views\Courses\Attending.cshtml" />
+    <Content Include="Views\Courses\Mine.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -318,6 +325,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202006141620218_AddFollowingsTable.resx">
       <DependentUpon>202006141620218_AddFollowingsTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202006150332159_AddIsCanceledColumnToCOurse.resx">
+      <DependentUpon>202006150332159_AddIsCanceledColumnToCOurse.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
